--- a/free_style/pubspec.yaml
+++ b/free_style/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   wifi_iot: ^0.3.19
   google_maps_flutter: ^2.9.0
   geolocator: ^13.0.1
+  google_mlkit_pose_detection: ^0.13.0
+  image_picker: ^1.1.2
+  path_provider: ^2.1.5
+  camera: ^0.11.0+2
+  # tflite: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +67,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
